# adobe-code-cli

./: .env.example  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CLI_COMMANDS.md  DEPENDENCIES.md  IDEA_LIST.md  IMPLEMENTATION_NOTES.md  INSTALL.md  INTEGRATION_TEST_PLAN.md  MANIFEST.in  MULTI_PROVIDER_COMPLETE.md  PHASE4_COMPLETE.md  PROGRESS_REPORT.md  PROJECT_OVERVIEW.md  README.md  RELEASE_NOTES_v0.2.0.md  SIGNUP_FIX_REPORT.md  analysis.json  cli_list.md  cli_scenario.md  custom_analysis.json  customer_profile_schema.json  membership_schema.json  pyproject.toml
.claude/: settings.local.json
.cursor/agents/: aep-schema-refactor.md  aep-schema-validator.md  aep-schema.md
.github/: copilot-instructions.md
.github/agents/: data-architect-agent.md
docs/: ADOBE_SETUP.md  LANGSMITH_SETUP.md  LLM_MODE.md  README.md  install.md
examples/: ai_schema_generation_demo.py  dataflow-examples.md  generate_schema.py  schema-generation.md  schema-registry-demo.py
examples/sample-data/: customers.csv  customers.json  events.json  orders.json  sample_schema.json
examples/validation-demo/: README.md  TROUBLESHOOTING.md  actual_customers.json  sample_customers.json
idea-backlogs/: AEP_MIGRATION_AGENT.md  AEP_MINDMAP.md  AEP_MINDMAP_WEB_UI.md  FEATURE_BACKLOG.md  README.md  SCHEMA_UX_IMPROVEMENT.md  SUPERVISOR_AGENT.md  VISUALIZATION_FRAMEWORK_REVIEW.md
output/: ecommerce-analyzed.md
scripts/: build.ps1  build.sh  run_integration_tests.ps1  setup_test_environment.ps1
test-data/: customer_profile_schema.json  sample_customers.csv
tests/: conftest.py  test_agent_domain_agents.py  test_agent_registry.py  test_agent_supervisor_graph.py  test_ai_inference.py  test_ai_plan.py  test_bulk_upload.py  test_catalog.py  test_csv_converter.py  test_data_analysis_cli.py  test_dataflow.py  test_dataflow_ask.py  test_dataflow_cache.py  test_destination_cache.py  test_id_resolver.py  test_ingestion_integration.py  test_integration.py  test_json_converter.py  test_langsmith_integration.py  test_langsmith_tracing.py  test_llm_tools.py  test_schema.py  test_segment_cache.py  test_segmentation.py  test_source_parser.py  test_type_detection.py  test_web_cli.py  test_workflow.py  test_xdm_validator.py
web/: .env.example  .gitignore  AUTH_FIX_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docker-compose.yml
(+204 files in other folders)
