[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adobe-experience-cloud-cli"
version = "0.2.0"
description = "Unified CLI for Adobe Experience Cloud - AEP, Target, Analytics, and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adobe Experience Cloud CLI Team"}
]
keywords = ["adobe", "aep", "experience-platform", "target", "analytics", "cli", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anthropic>=0.21.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/neep305/adobe-code-cli"
Repository = "https://github.com/neep305/adobe-code-cli"
Documentation = "https://github.com/neep305/adobe-code-cli/blob/main/README.md"
Issues = "https://github.com/neep305/adobe-code-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
data = [
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
]
aep = []  # AEP-specific dependencies (currently included in base)
all = ["adobe-experience-cloud-cli[aep,data]"]

[project.scripts]
aep = "adobe_experience.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/adobe_experience"]

[tool.hatch.build.targets.wheel.force-include]
"src/adobe_experience/i18n/en.json" = "adobe_experience/i18n/en.json"
"src/adobe_experience/i18n/ko.json" = "adobe_experience/i18n/ko.json"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
